--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,7 @@ steps:
     command: 'publish'
     publishWebProjects: false
     modifyOutputPath: false
+    configuration: $(buildConfiguration)
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish build artifact'
