--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,12 +16,11 @@ steps:
   displayName: 'Build'
 
 - task: DotNetCoreCLI@2
-  displayName: 'Create build artifact'
+  displayName: 'Create nuget package'
   inputs:
-    command: 'publish'
-    publishWebProjects: false
-    modifyOutputPath: false
-    configuration: $(buildConfiguration)
+    command: 'pack'
+    packagesToPack: '**/Rychusoft.Counters.ExecutionTime.csproj'
+    versioningScheme: 'byBuildNumber'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish build artifact'
