--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,25 @@ steps:
 - script: dotnet restore
   displayName: 'Restore packages'
 
+- task: SonarCloudPrepare@1
+  displayName: 'Start SonarCloud scan'
+  inputs:
+    SonarCloud: 'SonarCloud'
+    organization: 'rychu-pawel-github'
+    scannerMode: 'MSBuild'
+    projectKey: 'Rychu-Pawel_ExecutionTimeCounter'
+    projectName: 'ExecutionTimeCounter'
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'Build'
+
+- task: SonarCloudAnalyze@1
+  displayName: 'Stop SonarCloud scan'
+
+- task: SonarCloudPublish@1
+  displayName: 'Publish SonarCloud scan results'
+  inputs:
+    pollingTimeoutSec: '300'
 
 - script: dotnet pack --output $(Build.ArtifactStagingDirectory) --no-build /p:Configuration=$(BuildConfiguration) /p:PackageVersion=$(packageVersion) --verbosity Detailed
   displayName: 'Create nuget package'
