--- a/src/Rychusoft.Counters.ExecutionTimeCounter/Rychusoft.Counters.ExecutionTime.csproj
+++ b/src/Rychusoft.Counters.ExecutionTimeCounter/Rychusoft.Counters.ExecutionTime.csproj
@@ -1,7 +1,24 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0</Version>
+    <Authors>Rychusoft</Authors>
+    <Product>ExecutionTimeCounter</Product>
+    <Description>Easy to use library for measuring code execution time:
+
+var execution = ExecutionTimeCounter.Start("SLEEP EXECUTION");
+Thread.Sleep(5);
+ExecutionTimeCounter.Stop(execution);
+
+var result = ExecutionTimeCounter.ResultsToString();
+Console.WriteLine(result);</Description>
+    <Copyright>© Pawel Rychlicki 2020</Copyright>
+    <PackageProjectUrl>https://github.com/Rychu-Pawel/ExecutionTimeCounter</PackageProjectUrl>
+    <PackageIconUrl>http://pawelrychlicki.pl/favicon.ico</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Rychu-Pawel/ExecutionTimeCounter</RepositoryUrl>
+    <PackageTags>Execution time performance counter</PackageTags>
+    <PackageReleaseNotes>-</PackageReleaseNotes>
   </PropertyGroup>
 
 </Project>
