Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,12 +28,8 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'Build'
 
-- task: DotNetCoreCLI@2
+- script: dotnet test --configuration $(buildConfiguration) --collect "Code coverage' --no-build --logger trx
   displayName: 'Test'
-  inputs:
-    command: 'test'
-    projects: '**/*Tests.csproj'
-    arguments: '--configuration $(buildConfiguration) --collect "Code coverage'
 
 - task: SonarCloudAnalyze@1
   displayName: 'Stop SonarCloud scan'
