--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,8 @@ steps:
     projectKey: 'Rychu-Pawel_ExecutionTimeCounter'
     projectName: 'ExecutionTimeCounter'
     extraProperties: |
-      sonar.cs.vscoveragexml.reportsPaths=**/*.coverage
-      sonar.cs.vstest.reportsPaths=**/*.trx
+      sonar.cs.vscoveragexml.reportsPaths=$(Agent.TempDirectory)/**/*.coverage
+      sonar.cs.vstest.reportsPaths=$(Agent.TempDirectory)/**/*.trx
 
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'Build'
@@ -33,7 +33,7 @@ steps:
   inputs:
     command: 'test'
     projects: '**/*Tests.csproj'
-    arguments: '--configuration $(buildConfiguration) --no-build --collect "Code coverage" --results-directory $(Build.ArtifactStagingDirectory)'
+    arguments: '--configuration $(buildConfiguration) --no-build --collect "Code coverage"'
 
 - task: SonarCloudAnalyze@1
   displayName: 'Stop SonarCloud scan'
