Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ variables:
 
 steps:
 - script: dotnet restore
+          dotnet add package OpenCover
   displayName: 'Restore packages'
 
 - task: SonarCloudPrepare@1
