Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,8 @@ variables:
   packageVersion: '1.0.$(Build.BuildNumber)'
 
 steps:
-- script: dotnet restore
+- script: |
+          dotnet restore
           dotnet add package OpenCover
   displayName: 'Restore packages'
 
